[fix] resources are not updating in the cloned player board + passed player board is not sticking to the top/not z-indexing forward

--- a/fiftyfirststate.css
+++ b/fiftyfirststate.css
@@ -14,7 +14,7 @@
  *
  */
 .player-board.passed {
-  opacity: 0.4;
+  filter: contrast(0.3333333333) brightness(1.25) saturate(10%);
 }
 .player-board .playerResourcesWrapper {
   width: 100%;
@@ -52,6 +52,9 @@
   position: fixed;
   top: 0;
   z-index: 1;
+}
+.player-board #sticky.passed {
+  filter: contrast(0.3333333333) brightness(1.25) saturate(10%);
 }
 
 .factionWrapper {
@@ -792,10 +795,6 @@
   vertical-align: middle;
   width: 30px;
   height: 30px;
-}
-
-img:first-of-type {
-  filter: opacity(var(--o, 1));
 }
 
 .playerResourcesWrapper {
