--- a/modules/css/common.scss
+++ b/modules/css/common.scss
@@ -142,10 +142,6 @@
   height: 30px;
 }
 
-img:first-of-type {
-  filter: opacity(var(--o, 1));
-}
-
 .playerResourcesWrapper {
   background-color: #ebd5bd;
 }
